[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfhirsdc"
version = "0.0.1"
description = "A tool for FHIR structure data capture"
dependencies = [
    "wheel",
    "pandas",
    "openpyxl",
    "fhir.resources==6.4.0",
    "pydantic",
    "validators",
    "odfpy",
    "ocldev",
    "requests-toolbelt",
    "jsonpath-ng",
    "textile",
    "fhirpathpy",
    "webcolors"
]