[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfhirsdc"
version = "0.1.0"
description = "A tool for FHIR structure data capture"
dependencies = [
    "wheel",
    "pandas",
    "openpyxl",
    "fhir.resources>=7.0.2",
    "validators",
    "odfpy",
    "ocldev",
    "requests-toolbelt",
    "jsonpath-ng",
    "textile",
    "fhirpathpy",
    "semantic-version",
    "py-markdown-table"
]