[metadata]
name =  pyDAK
version = 0.0.1
author = Marco Peirera & Patrick Delcroix
author_email = httu.admin@swisstph.ch
description = create FHIR artefact based on datadictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SwissTPH/DAK-tools
project_urls =
    Bug Tracker = https://github.com/SwissTPH/DAK-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src